fix: truly get rid of all scrollbars

--- a/stylus-dracula.user.css
+++ b/stylus-dracula.user.css
@@ -4,7 +4,7 @@
 @namespace		https://github.com/Himither
 @homepageURL		https://github.com/Himither/Stylus-Dracula
 @supportURL		https://github.com/Himither/Stylus-Dracula/issues
-@version		1.0.11
+@version		1.0.12
 @updateURL		https://raw.githubusercontent.com/Himither/Stylus-Dracula/master/stylus-dracula.user.css
 @description		Improved dracula theme covering the whole extension instead of just the editor
 @author			Himither
@@ -80,6 +80,7 @@ regexp("^\\w+-extension://.+") {
 
 	if scrollbars {
 
+		#stylus,
 		#stylus * {
 			scrollbar-width: none;
 		}
